<resources>
    <string name="app_name" translatable="false">VolumeClient</string>
    <string name="show_settings">show settings</string>
    <string name="server_addr">Server Addr.</string>
    <string name="server_port">Server Port</string>
    <string name="decrement">decrement</string>
    <string name="increment">increment</string>
    <string name="presets_title">Presets (long tap to delete)</string>
    <string name="plus_punk">+</string>
    <string name="password">Password</string>
    <string name="connected">Connected.</string>
    <string name="connection_error">Connection error.\n%1$s</string>
    <string name="refresh">Refresh</string>
    <string name="dark_theme">Dark theme</string>
    <string name="password_showing_toggle">Toggle showing password</string>
    <string name="title_bar">Title bar</string>
    <string name="media_control">Media control</string>
    <string name="media_play_pause">Play or Pause</string>
    <string name="media_next_track">Track next</string>
    <string name="media_previous_track">Track previous</string>
    <string name="media_stop">Stop</string>
    <string name="kill_amazon_music">Stop Amazon Music</string>
    <string name="volume_min_db">Minimum volume(dB)</string>
</resources>
