<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:orientation="vertical"
    android:padding="12dp"
    android:scrollbarStyle="outsideOverlay"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swConnectionSettings"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="end|center_vertical"
            android:text="@string/show_connection_settings" />

        <TableLayout
            android:id="@+id/tlConnectionSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:stretchColumns="1">

            <TableRow>

                <TextView
                    android:labelFor="@+id/etServerAddr"
                    android:text="@string/server_addr" />

                <EditText
                    android:id="@+id/etServerAddr"
                    android:importantForAutofill="no"
                    android:inputType="text" />
            </TableRow>

            <TableRow>

                <TextView
                    android:labelFor="@+id/etServerPort"
                    android:text="@string/server_port" />

                <EditText
                    android:id="@+id/etServerPort"
                    android:importantForAutofill="no"
                    android:inputType="number" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/tvDeviceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <SeekBar
            android:id="@+id/sbVolume"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:padding="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvVolume"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end|center_vertical" />

            <ImageButton
                android:id="@+id/btnDecrement"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/decrement"
                android:src="@drawable/ic_arrow_left" />

            <ImageButton
                android:id="@+id/btnIncrement"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/increment"
                android:src="@drawable/ic_arrow_right" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/presets_title" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/flPresets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnPresetPlus"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:minWidth="40dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/plus_punk" />
        </com.google.android.flexbox.FlexboxLayout>

        <EditText
            android:id="@+id/etError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:importantForAutofill="no"
            android:inputType="none" />
    </LinearLayout>
</ScrollView>